syntax = "proto3";

package org.project_planton.provider.digitalocean.digitaloceanbucket.v1;

import "buf/validate/validate.proto";
import "org/project_planton/provider/digitalocean/digitaloceanbucket/v1/spec.proto";
import "org/project_planton/provider/digitalocean/digitaloceanbucket/v1/stack_outputs.proto";
import "org/project_planton/shared/metadata.proto";

// digital-ocean-bucket
message DigitalOceanBucket {
  //api-version
  string api_version = 1 [(buf.validate.field).string.const = "digital-ocean.project-planton.org/v1"];

  //resource-kind
  string kind = 2 [(buf.validate.field).string.const = "DigitalOceanBucket"];

  //metadata
  org.project_planton.shared.CloudResourceMetadata metadata = 3 [(buf.validate.field).required = true];

  //spec
  DigitalOceanBucketSpec spec = 4 [(buf.validate.field).required = true];

  //status
  DigitalOceanBucketStatus status = 5;
}

// digital-ocean-bucket status
message DigitalOceanBucketStatus {
  //stack-outputs
  //  digital-ocean-bucket stack-outputs
  DigitalOceanBucketStackOutputs outputs = 1;
}
