syntax = "proto3";

package project.planton.provider.digitalocean.digitaloceanbucket.v1;

import "buf/validate/validate.proto";
import "project/planton/provider/digitalocean/region.proto";

// DigitalOceanBucketSpec defines the user configuration for a DigitalOcean Spaces bucket.
message DigitalOceanBucketSpec {
  // bucket name (DNS-compatible, 3â€“63 chars)
  string bucket_name = 1 [
    (buf.validate.field).required = true,
    (buf.validate.field).string.pattern = "^[a-z0-9]([-a-z0-9]*[a-z0-9])?$",
    (buf.validate.field).string.min_len = 3,
    (buf.validate.field).string.max_len = 63
  ];

  // region slug (datacenter location for the bucket)
  DigitalOceanRegion region = 2 [(buf.validate.field).required = true];

  // access control setting for the bucket (private or public-read)
  DigitalOceanBucketAccessControl access_control = 3;

  // enable versioning for the bucket (disabled by default)
  bool versioning_enabled = 4;

  // tags to apply to the bucket (must be unique)
  repeated string tags = 5 [(buf.validate.field).repeated.unique = true];
}

// Supported access control settings for a bucket.
enum DigitalOceanBucketAccessControl {
  PRIVATE = 0;
  PUBLIC_READ = 1;
}
